--- a/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
+++ b/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
@@ -7,7 +7,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DataGridShowDeleteConfirmation</title>
+    <title>How to implement the delete confirmation feature</title>
+    <meta name="description" content="This example illustrates how to implement the confirmation dialog before deleting a record" />
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
