--- a/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
+++ b/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
@@ -21,7 +21,7 @@
             return confirm("Are you sure that you want to delete this record?");
         };
     </script>
-    <app>@(await Html.RenderComponentAsync<App>())</app>
+    <app>@(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))</app>
 
     <script src="_framework/blazor.server.js"></script>
 </body>
