--- a/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
+++ b/CS/DataGridShowDeleteConfirmation/Pages/_Host.cshtml
@@ -1,27 +1,8 @@
 ﻿@page "/"
 @namespace DataGridShowDeleteConfirmation.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    Layout = "_Layout";
+}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>How to implement the delete confirmation feature</title>
-    <meta name="description" content="This example illustrates how to implement the confirmation dialog before deleting a record" />
-    <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="_content/DevExpress.Blazor/dx-blazor.css" rel="stylesheet" />
-</head>
-<body>
-    <script>
-        function confirmDelete() {
-            return confirm("Are you sure that you want to delete this record?");
-        };
-    </script>
-    <app>@(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))</app>
-
-    <script src="_framework/blazor.server.js"></script>
-</body>
-</html>
+<component type="typeof(App)" render-mode="ServerPrerendered" />
