--- a/CS/DataGridShowDeleteConfirmation/Shared/NavMenu.razor
+++ b/CS/DataGridShowDeleteConfirmation/Shared/NavMenu.razor
@@ -2,11 +2,10 @@
 <DxTreeView AllowSelectNodes="true" CssClass="app-sidebar">
     <Nodes>
         <DxTreeViewNode NavigateUrl="./" Text="Overview"></DxTreeViewNode>
-        <DxTreeViewNode NavigateUrl="grid" Text="Grid"></DxTreeViewNode>
     </Nodes>
 </DxTreeView>
 </div>
 
 @code {
-    [Parameter] public string? StateCssClass { get; set; }
+    [Parameter] public string StateCssClass { get; set; }
 }
