--- a/CS/DataGridShowDeleteConfirmation/wwwroot/css/site.css
+++ b/CS/DataGridShowDeleteConfirmation/wwwroot/css/site.css
@@ -9,6 +9,10 @@ html, body {
     overflow: hidden;
 }
 
+#app {
+    background-color: inherit;
+}
+
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
