--- a/CS/DataGridShowDeleteConfirmation/Pages/Index.razor
+++ b/CS/DataGridShowDeleteConfirmation/Pages/Index.razor
@@ -11,18 +11,21 @@ else {
         <Columns>
             <DxGridCommandColumn Width="70px" NewButtonVisible="false">
                 <CellDisplayTemplate Context="myContext">
-                    <DxButton Text="Delete" RenderStyle="ButtonRenderStyle.Link" RenderStyleMode="ButtonRenderStyleMode.Contained"  Click="@((e) => OnDeleteButtonClick(e, myContext))" />
+                    @{
+                        int id = (myContext.DataItem as WeatherForecast).ID;
+                        <DxButton RenderStyle="ButtonRenderStyle.Link" RenderStyleMode="ButtonRenderStyleMode.Contained" Text="Delete" Click="@((e) => OnDeleteButtonClick(e, myContext))" />
+                    }
                 </CellDisplayTemplate>
             </DxGridCommandColumn>
-            <DxGridDataColumn Caption="Date" FieldName="Date"/>
+            <DxGridDataColumn Caption="Date" FieldName="Date" />
             <DxGridDataColumn Caption="Temperature" FieldName="TemperatureF"/>
         </Columns>
     </DxGrid>
     <DxPopup @bind-Visible="@popupVisible" HeaderText="Please confirm" Width="auto" CloseOnOutsideClick="false">
-        You are about to delete the record with the id = @dataSourceIndex. Are you sure?
+        You are about to delete the record with the id = @id. Are you sure?
         <div class="dxbs-grid-confirm-dialog-buttons">
             <DxButton Text="Cancel " RenderStyle="ButtonRenderStyle.Success" Click="@OnCancelButtonClick"/>
-            <DxButton Text="Confirm" RenderStyle="ButtonRenderStyle.Danger" Click="@OnConfirmButtonClick"/>
+            <DxButton Text="Confirm" RenderStyle="ButtonRenderStyle.Danger" Click="@OnConfirmButtonClick" />
         </div>
     </DxPopup>
 }
@@ -30,22 +33,21 @@ else {
 @code {
     bool popupVisible { get; set; } = false;
     IGrid myGrid { get; set; }
-    Int32 dataSourceIndex { get; set; }
+    Int32 id { get; set; }
 
-    private WeatherForecast[] forecasts;
+    List<WeatherForecast> forecasts;
 
     protected override async Task OnInitializedAsync() {
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
     }
 
     void OnDeleteButtonClick(MouseEventArgs args, GridCommandColumnCellDisplayTemplateContext context) {
-        WeatherForecast itemToDelete = myGrid.GetDataItem(context.VisibleIndex) as WeatherForecast;
-        dataSourceIndex = Array.IndexOf(forecasts, itemToDelete);
+        id = (context.DataItem as WeatherForecast).ID;
         popupVisible = true;
     }
 
     void OnConfirmButtonClick(MouseEventArgs args) {
-        forecasts = forecasts.Where((value, dataIndex) => dataIndex != dataSourceIndex).ToArray();
+        forecasts.Remove(forecasts.Find(m => m.ID == id));
         myGrid.Reload();
         popupVisible = false;
     }
