--- a/CS/DataGridShowDeleteConfirmation/Shared/Header.razor
+++ b/CS/DataGridShowDeleteConfirmation/Shared/Header.razor
@@ -2,7 +2,7 @@
     <button class="navbar-toggler bg-primary d-block" @onclick="OnToggleClick">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="ml-3 font-weight-bold title pr-4">DataGridShowDeleteConfirmation</div>
+    <div class="ms-3 fw-bold title pe-4">DataGridShowDeleteConfirmation</div>
 </nav>
 
 @code {
