--- a/CS/DataGridShowDeleteConfirmation/Pages/Index.razor
+++ b/CS/DataGridShowDeleteConfirmation/Pages/Index.razor
@@ -1,48 +1,58 @@
 ﻿@page "/"
 
-@inject WeatherForecastService ForecastService
-@inject IJSRuntime JsRuntime;
 @using DataGridShowDeleteConfirmation.Data
+@inject WeatherForecastService ForecastService
 
-
-@if (forecasts == null)
-{
-    <h1>Loading...</h1>
+@if (forecasts == null) {
+    <p><em>Loading...</em></p>
 }
 else {
-    <DxDataGrid @ref="@Grid" 
-                Data=@forecasts 
-                CssClass="MainGrid" 
-                SelectionMode="@DataGridSelectionMode.None" 
-                ShowPager="false" 
-                ShowFilterRow=false>
-        <DxDataGridColumn Field=@nameof(WeatherForecast.ID) Width="150px" Caption="#">
-            <DisplayTemplate>
-                @{
-                    int id = (context as WeatherForecast).ID;
-                    <button @onclick="@(() => { DeleteWithConfirmation(id); })">Delete</button>
-                }
-            </DisplayTemplate>
-        </DxDataGridColumn>
-        <DxDataGridDateEditColumn Field=@nameof(WeatherForecast.Date) Width="200px" />
-        <DxDataGridColumn Field=@nameof(WeatherForecast.TemperatureC) Width="200px" />
-        <DxDataGridColumn Field=@nameof(WeatherForecast.TemperatureF) Width="200px" />
-        <DxDataGridColumn Field=@nameof(WeatherForecast.Summary) Width="200px" />
-    </DxDataGrid>
+    <DxGrid Data="@forecasts" CssClass="mw-1100" @ref="myGrid">
+        <Columns>
+            <DxGridCommandColumn Width="70px" NewButtonVisible="false">
+                <CellDisplayTemplate Context="myContext">
+                    @{
+                        int id = (myContext.DataItem as WeatherForecast).ID;
+                        <DxButton RenderStyle="ButtonRenderStyle.Link" RenderStyleMode="ButtonRenderStyleMode.Contained" Text="Delete" Click="@((e) => OnDeleteButtonClick(e, myContext))" />
+                    }
+                </CellDisplayTemplate>
+            </DxGridCommandColumn>
+            <DxGridDataColumn Caption="Date" FieldName="Date" />
+            <DxGridDataColumn Caption="Temperature" FieldName="TemperatureF"/>
+        </Columns>
+    </DxGrid>
+    <DxPopup @bind-Visible="@popupVisible" HeaderText="Please confirm" Width="auto" CloseOnOutsideClick="false">
+        You are about to delete the record with the id = @id. Are you sure?
+        <div class="dxbs-grid-confirm-dialog-buttons">
+            <DxButton Text="Cancel " RenderStyle="ButtonRenderStyle.Success" Click="@OnCancelButtonClick"/>
+            <DxButton Text="Confirm" RenderStyle="ButtonRenderStyle.Danger" Click="@OnConfirmButtonClick" />
+        </div>
+    </DxPopup>
 }
 
 @code {
+    bool popupVisible { get; set; } = false;
+    IGrid myGrid { get; set; }
+    Int32 id { get; set; }
+
     List<WeatherForecast> forecasts;
-    DxDataGrid<WeatherForecast> Grid;
+
     protected override async Task OnInitializedAsync() {
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
     }
-    async void DeleteWithConfirmation(int id) {
-        //delete
-        bool isConfirmed = await JsRuntime.InvokeAsync<bool>("confirmDelete");
-        if (isConfirmed) {
-            forecasts.Remove(forecasts.Find(m => m.ID == id));
-            await Grid.Refresh();
-        }
+
+    void OnDeleteButtonClick(MouseEventArgs args, GridCommandColumnCellDisplayTemplateContext context) {
+        id = (context.DataItem as WeatherForecast).ID;
+        popupVisible = true;
+    }
+
+    void OnConfirmButtonClick(MouseEventArgs args) {
+        forecasts.Remove(forecasts.Find(m => m.ID == id));
+        myGrid.Reload();
+        popupVisible = false;
+    }
+
+    void OnCancelButtonClick(MouseEventArgs args) {
+        popupVisible = false;
     }
 }
