--- a/CS/DataGridShowDeleteConfirmation/Pages/_Layout.cshtml
+++ b/CS/DataGridShowDeleteConfirmation/Pages/_Layout.cshtml
@@ -19,10 +19,12 @@
         var isIEOrEdgeLegacy = Context.Request.Headers["User-Agent"]
             .Any(userAgent => userAgent.Contains("MSIE") || userAgent.Contains("Trident") || userAgent.Contains("Edge/"));
     }
-    @if(isIEOrEdgeLegacy) {
+    @if(isIEOrEdgeLegacy)
+    {
         <component type="typeof(DataGridShowDeleteConfirmation.Shared.BrowserNotSupported)" render-mode="Static" />
     }
-    else {
+    else
+    {
         @RenderBody()
 
         <div id="blazor-error-ui">
@@ -37,11 +39,6 @@
         </div>
 
         <script src="_framework/blazor.server.js"></script>
-        <script>
-            function confirmDelete() {
-                return confirm("Are you sure that you want to delete this record?");
-            };
-        </script>
     }
 </body>
 </html>
